# lydia

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
binproto/: CMakeLists.txt
binproto/include/binproto/: Array.h  BufferReader.h  BufferWriter.h  Concepts.h  EndianUtils.h  Message.h  Optional.h  ReadStream.h  Utils.h  WriteStream.h
binproto/src/: Array.cpp  BufferReader.cpp  BufferWriter.cpp  CMakeLists.txt  EndianUtils.cpp  Version.cpp
narwhal/: CMakeLists.txt  README.md
narwhal/include/narwhal/: EnumBitflagUtils.h  WorkerThread.h
narwhal/src/: dummy.cpp
protocol/: .gitmodules  CMakeLists.txt
protocol/include/lydia/messages/: ConnectMessage.h  ControlMessages.h  ListMessage.h  LydiaConfig.h  LydiaMessage.h  UserMessages.h  VMReference.h
protocol/src/messages/: ConnectMessage.cpp  ControlMessages.cpp  ListMessage.cpp  UserMessages.cpp  VMReference.cpp
server/: CMakeLists.txt
server/include/lydia/: dummy.h
server/src/: main.cpp
